GNOME Bugzilla – Bug 759857
Signal name should not be translated
Last modified: 2015-12-25 13:27:56 UTC
Signal names are marked with P_ for translation in gdk/gdkseat.c g_signal_new (P_("device-added"), G_TYPE_FROM_CLASS (klass), G_SIGNAL_RUN_LAST, G_STRUCT_OFFSET (GdkSeatClass, device_added), NULL, NULL, g_cclosure_marshal_VOID__OBJECT, G_TYPE_NONE, 1, GDK_TYPE_DEVICE); g_signal_new (P_("device-removed"), G_TYPE_FROM_CLASS (klass), G_SIGNAL_RUN_LAST, G_STRUCT_OFFSET (GdkSeatClass, device_removed), NULL, NULL, g_cclosure_marshal_VOID__OBJECT, G_TYPE_NONE, 1, GDK_TYPE_DEVICE);
Spectacular thinko. Thanks for spotting.
The following fix has been pushed: 9290aa7 GdkSeat: Use g_intern_static_string() for signal names
Created attachment 317874 [details] [review] GdkSeat: Use g_intern_static_string() for signal names