GdkSeat: Use g_intern_static_string() for signal names

https://bugzilla.gnome.org/show_bug.cgi?id=759857